# Awesome-Agent-Workflow

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
cli/: DESIGN.md  __init__.py  main.py  workflow.py
docs/: DESIGN.md  MCP自动更新exe化与Chrys适配-功能设计说明书.md  MCP自动更新exe化与Chrys适配-测试设计说明书.md  MCP自动更新exe化与Chrys适配-详细设计说明书.md  auto-update-design.md  client-update.md  release-guide.md  server-startup.md  (+2 more)
telemetry-server/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.remote.yaml  compose.yaml  pyproject.toml
telemetry-server/config/: database.example.yaml  database.yaml  logging.yaml  projects.yaml
telemetry-server/deploy/: aaw-telemetry.service  bootstrap-native.sh  bootstrap-remote.sh  nginx-aaw-telemetry.conf  remote-smoke-test.py
telemetry-server/docs/: logging.md  remote-integration.md  testing.md
telemetry-server/migrations/: env.py
telemetry-server/migrations/versions/: 0001_initial.py  0002_mock_code_attribution.py  0003_dev_patch_uploads.py  0004_single_step_messages.py  0005_start_step_messages.py  0006_mysql_millisecond_timestamps.py  0007_real_attribution_status.py  0008_task_execution_identity.py
telemetry-server/src/aaw_telemetry/: __init__.py  config.py  database.py  errors.py  logging.py  main.py  middleware.py  models.py  schemas.py
telemetry-server/src/aaw_telemetry/routers/: dashboard.py  objects.py  releases.py  telemetry.py
telemetry-server/src/aaw_telemetry/services/: attribution_engine.py  attribution_service.py  attribution_tasks.py  ingestion.py  mock_attribution_service.py  objects.py  queries.py  real_attribution_service.py
telemetry-server/src/aaw_telemetry/static/: index.html
telemetry-server/tests/: conftest.py  test_attribution_services.py  test_dashboard.py  test_ingestion.py  test_limits_and_public_api.py  test_logging.py  test_objects.py  test_project_config.py  test_releases.py  test_timestamp_precision.py
(+129 files in other folders)
