[project]
name = "aaw"
version = "2.3.2"
description = "AAW workflow CLI - deterministic workflow state management"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
