[project]
name = "aaw-telemetry-server"
version = "2.3.1"
description = "AAW telemetry collection and dashboard service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2.0.36,<3",
    "PyMySQL>=1.1,<2",
    "pydantic-settings>=2.7,<3",
    "pyyaml>=6.0.2,<7",
    "alembic>=1.14,<2",
    "concurrent-log-handler>=0.9.29,<1",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aaw_telemetry = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=aaw_telemetry --cov-report=term-missing --cov-fail-under=90"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]
